[workspace]
resolver = "2"
members = [
    "api",
    "api/common",
    "api/quic",
    "api/tcp",
    "common",
    "modules/bench/client",
    "modules/bench/common",
    "modules/bench/server",
    "modules/bench/simulation",
    "modules/cli",
    "modules/router",
    "pallet",
    "runtime",
]
default-members = ["runtime"]
