[package]
name = "ipiis-api"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "InterPlanetary Interface Interconnection Service"
documentation = "https://docs.rs/ipiis"
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://ulagbulag.io/"
repository = "https://github.com/ulagbulag-village/ipiis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tcp"]
quic = ["ipiis-api-quic"]
tcp = ["ipiis-api-tcp"]

[target.'cfg(not(target_os = "wasi"))'.dependencies]
ipiis-api-quic = { path = "./quic", optional = true }
ipiis-api-tcp = { path = "./tcp", optional = true }
ipiis-common = { path = "../common" }

[dev-dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis" }

bytecheck = "0.6"
rkyv = { version = "0.7", features = ["archive_be"] }
