[package]
name = "ipiis-api-quic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis" }
ipiis-common = { path = "../../common" }

bitflags = "1.3"
bytecheck = "0.6"
rkyv = { version = "0.7", features = ["archive_be"] }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
futures = "0.3"
quinn = "0.8"
rcgen = "0.9"
rustls = "0.20"
sled = "0.34"
tempfile = "3.3"

[target.'cfg(not(target_os = "wasi"))'.dev-dependencies]
tokio = { version = "1.18", features = ["full"] }
