[package]
name = "ipiis-api-quic"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "InterPlanetary Interface Interconnection Service"
documentation = "https://docs.rs/ipiis"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
homepage = "https://ulagbulag.io/"
repository = "https://github.com/ulagbulag-village/ipiis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis" }
ipiis-common = { path = "../../common" }

bitflags = "1.3"
bytecheck = "0.6"
rkyv = { version = "0.7", features = ["archive_be"] }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
futures = "0.3"
quinn = "0.8"
rcgen = "0.9"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
sled = "0.34"
tempfile = "3.3"
