[package]
name = "ipiis-api-tcp"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "InterPlanetary Interface Interconnection Service"
documentation = "https://docs.rs/ipiis"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
homepage = "https://ulagbulag.io/"
repository = "https://github.com/ulagbulag-village/ipiis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis", features = ["net"] }
ipiis-api-common = { path = "../common" }
ipiis-common = { path = "../../common" }
