[package]
name = "ipiis-api-quic-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cert"]
cert = ["rcgen", "rustls"]

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis" }
ipiis-common = { path = "../../../common" }

bitflags = "1.3"
bytecheck = "0.6"
rcgen = { version = "0.9", optional = true }
rkyv = { version = "0.7", features = ["archive_be"] }
rustls = { version = "0.20", optional = true }
