[package]
name = "ipiis-api-quic-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis" }
ipiis-api-quic-common = { path = "../common", features = ["cert"] }

futures = "0.3"
quinn = "0.8"
sled = "0.34"
tempfile = "3.3"

[dev-dependencies]
bytecheck = "0.6"
rkyv = { version = "0.7", features = ["archive_be"] }
tokio = { version = "1.18", features = ["full"] }
