[package]
name = "ipiis-modules-bench-client"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "InterPlanetary Interface Interconnection Service"
documentation = "https://docs.rs/ipiis"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../../../README.md"
homepage = "https://ulagbulag.io/"
repository = "https://github.com/ulagbulag-village/ipiis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis" }
ipiis-api-quic = { path = "../../../api/quic" }
ipiis-api-tcp = { path = "../../../api/tcp" }
ipiis-common = { path = "../../../common" }
ipiis-modules-bench-common = { path = "../common" }

rand = "0.8"
serde_json = "1.0"
